--- a/public/test3.html
+++ b/public/test3.html
@@ -143,7 +143,7 @@
 
   <!-- Modal: عرض/تعديل الروابط -->
   <div class="modal fade" id="editModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-scrollable">
+    <div class="modal-dialog modal-xl modal-dialog-scrollable modal-fullscreen-lg-down">
       <div class="modal-content">
         <div class="modal-header">
           <h5 class="modal-title">عرض/تعديل روابط السجل</h5>
